####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = small 

EXTRA_DIST = airfield_c.xpm airfield_g.xpm airport.xpm airspace.xpm ambheliport.xpm civheliport.xpm civmilair.xpm closed.xpm glider.xpm glider2.xpm jump.xpm milairport.xpm milheliport.xpm obst_group.xpm obst_group_light.xpm obst_light.xpm obstacle.xpm outlanding.xpm paraglider.xpm routepoint.xpm ul.xpm vortac.xpm waypoint.xpm 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/airfield_c.xpm $(kde_datadir)/kflog/mapicons/airfield_c.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/airfield_g.xpm $(kde_datadir)/kflog/mapicons/airfield_g.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/airport.xpm $(kde_datadir)/kflog/mapicons/airport.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/airspace.xpm $(kde_datadir)/kflog/mapicons/airspace.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/ambheliport.xpm $(kde_datadir)/kflog/mapicons/ambheliport.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/civheliport.xpm $(kde_datadir)/kflog/mapicons/civheliport.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/civmilair.xpm $(kde_datadir)/kflog/mapicons/civmilair.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/closed.xpm $(kde_datadir)/kflog/mapicons/closed.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/glider.xpm $(kde_datadir)/kflog/mapicons/glider.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/glider2.xpm $(kde_datadir)/kflog/mapicons/glider2.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/jump.xpm $(kde_datadir)/kflog/mapicons/jump.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/milairport.xpm $(kde_datadir)/kflog/mapicons/milairport.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/milheliport.xpm $(kde_datadir)/kflog/mapicons/milheliport.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/obst_group.xpm $(kde_datadir)/kflog/mapicons/obst_group.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/obst_group_light.xpm $(kde_datadir)/kflog/mapicons/obst_group_light.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/obst_light.xpm $(kde_datadir)/kflog/mapicons/obst_light.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/obstacle.xpm $(kde_datadir)/kflog/mapicons/obstacle.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/outlanding.xpm $(kde_datadir)/kflog/mapicons/outlanding.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/paraglider.xpm $(kde_datadir)/kflog/mapicons/paraglider.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/routepoint.xpm $(kde_datadir)/kflog/mapicons/routepoint.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/ul.xpm $(kde_datadir)/kflog/mapicons/ul.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/vortac.xpm $(kde_datadir)/kflog/mapicons/vortac.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/
	$(INSTALL_DATA) $(srcdir)/waypoint.xpm $(kde_datadir)/kflog/mapicons/waypoint.xpm

uninstall-local:
	-rm -f $(kde_datadir)/kflog/mapicons/airfield_c.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/airfield_g.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/airport.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/airspace.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/ambheliport.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/civheliport.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/civmilair.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/closed.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/glider.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/glider2.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/jump.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/milairport.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/milheliport.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/obst_group.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/obst_group_light.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/obst_light.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/obstacle.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/outlanding.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/paraglider.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/routepoint.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/ul.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/vortac.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/waypoint.xpm

####### kdevelop will overwrite this part!!! (end)############
