####### kdevelop will overwrite this part!!! (begin)##########
lib_LTLIBRARIES = libopengl_igc.la


INCLUDES = $(all_includes)


LDFLAGS =               


libopengl_igc_la_LDFLAGS = -version-info 1:0:0

libopengl_igc_la_METASOURCES = AUTO

libopengl_igc_la_SOURCES = glview.cpp opengl_igc.cpp openglwidget.cpp 


EXTRA_DIST = openglwidget.cpp openglwidget.h opengl_igc.cpp opengl_igc.h glview.cpp glview.h 

####### kdevelop will overwrite this part!!! (end)############
