####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = brush0.png brush1.png brush10.png brush11.png brush12.png brush2.png brush3.png brush4.png brush5.png brush6.png brush7.png brush8.png brush9.png dashdot.png dashdotdot.png dashed.png dotted.png flag_green.png flag_red.png solid.png splash.png 

install-data-local:
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/brush0.png (kde_datadir)/kflog/pics/brush0.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/brush1.png (kde_datadir)/kflog/pics/brush1.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/brush10.png (kde_datadir)/kflog/pics/brush10.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/brush11.png (kde_datadir)/kflog/pics/brush11.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/brush12.png (kde_datadir)/kflog/pics/brush12.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/brush2.png (kde_datadir)/kflog/pics/brush2.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/brush3.png (kde_datadir)/kflog/pics/brush3.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/brush4.png (kde_datadir)/kflog/pics/brush4.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/brush5.png (kde_datadir)/kflog/pics/brush5.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/brush6.png (kde_datadir)/kflog/pics/brush6.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/brush7.png (kde_datadir)/kflog/pics/brush7.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/brush8.png (kde_datadir)/kflog/pics/brush8.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/brush9.png (kde_datadir)/kflog/pics/brush9.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/dashdot.png (kde_datadir)/kflog/pics/dashdot.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/dashdotdot.png (kde_datadir)/kflog/pics/dashdotdot.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/dashed.png (kde_datadir)/kflog/pics/dashed.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/dotted.png (kde_datadir)/kflog/pics/dotted.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/flag_green.png (kde_datadir)/kflog/pics/flag_green.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/flag_red.png (kde_datadir)/kflog/pics/flag_red.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/solid.png (kde_datadir)/kflog/pics/solid.png
	$(mkinstalldirs) (kde_datadir)/kflog/pics/
	$(INSTALL_DATA) $(srcdir)/splash.png (kde_datadir)/kflog/pics/splash.png

uninstall-local:
	-rm -f (kde_datadir)/kflog/pics/brush0.png
	-rm -f (kde_datadir)/kflog/pics/brush1.png
	-rm -f (kde_datadir)/kflog/pics/brush10.png
	-rm -f (kde_datadir)/kflog/pics/brush11.png
	-rm -f (kde_datadir)/kflog/pics/brush12.png
	-rm -f (kde_datadir)/kflog/pics/brush2.png
	-rm -f (kde_datadir)/kflog/pics/brush3.png
	-rm -f (kde_datadir)/kflog/pics/brush4.png
	-rm -f (kde_datadir)/kflog/pics/brush5.png
	-rm -f (kde_datadir)/kflog/pics/brush6.png
	-rm -f (kde_datadir)/kflog/pics/brush7.png
	-rm -f (kde_datadir)/kflog/pics/brush8.png
	-rm -f (kde_datadir)/kflog/pics/brush9.png
	-rm -f (kde_datadir)/kflog/pics/dashdot.png
	-rm -f (kde_datadir)/kflog/pics/dashdotdot.png
	-rm -f (kde_datadir)/kflog/pics/dashed.png
	-rm -f (kde_datadir)/kflog/pics/dotted.png
	-rm -f (kde_datadir)/kflog/pics/flag_green.png
	-rm -f (kde_datadir)/kflog/pics/flag_red.png
	-rm -f (kde_datadir)/kflog/pics/solid.png
	-rm -f (kde_datadir)/kflog/pics/splash.png

####### kdevelop will overwrite this part!!! (end)############
