####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = airfield_c.xpm airport.xpm ambheliport.xpm civheliport.xpm civmilair.xpm closed.xpm glider.xpm glider2.xpm jump.xpm milairport.xpm milheliport.xpm obst_group.xpm obstacle.xpm outlanding.xpm paraglider.xpm routepoint.xpm ulf.xpm vortac.xpm waypoint.xpm 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/airfield_c.xpm $(kde_datadir)/kflog/mapicons/small/airfield_c.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/airport.xpm $(kde_datadir)/kflog/mapicons/small/airport.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/ambheliport.xpm $(kde_datadir)/kflog/mapicons/small/ambheliport.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/civheliport.xpm $(kde_datadir)/kflog/mapicons/small/civheliport.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/civmilair.xpm $(kde_datadir)/kflog/mapicons/small/civmilair.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/closed.xpm $(kde_datadir)/kflog/mapicons/small/closed.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/glider.xpm $(kde_datadir)/kflog/mapicons/small/glider.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/glider2.xpm $(kde_datadir)/kflog/mapicons/small/glider2.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/jump.xpm $(kde_datadir)/kflog/mapicons/small/jump.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/milairport.xpm $(kde_datadir)/kflog/mapicons/small/milairport.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/milheliport.xpm $(kde_datadir)/kflog/mapicons/small/milheliport.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/obst_group.xpm $(kde_datadir)/kflog/mapicons/small/obst_group.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/obstacle.xpm $(kde_datadir)/kflog/mapicons/small/obstacle.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/outlanding.xpm $(kde_datadir)/kflog/mapicons/small/outlanding.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/paraglider.xpm $(kde_datadir)/kflog/mapicons/small/paraglider.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/routepoint.xpm $(kde_datadir)/kflog/mapicons/small/routepoint.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/ulf.xpm $(kde_datadir)/kflog/mapicons/small/ul.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/vortac.xpm $(kde_datadir)/kflog/mapicons/small/vortac.xpm
	$(mkinstalldirs) $(kde_datadir)/kflog/mapicons/small/
	$(INSTALL_DATA) $(srcdir)/waypoint.xpm $(kde_datadir)/kflog/mapicons/small/waypoint.xpm

uninstall-local:
	-rm -f $(kde_datadir)/kflog/mapicons/small/airfield_c.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/airport.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/ambheliport.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/civheliport.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/civmilair.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/closed.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/glider.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/glider2.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/jump.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/milairport.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/milheliport.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/obst_group.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/obstacle.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/outlanding.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/paraglider.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/routepoint.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/ul.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/vortac.xpm
	-rm -f $(kde_datadir)/kflog/mapicons/small/waypoint.xpm

####### kdevelop will overwrite this part!!! (end)############
